--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p class="app-name">devfinder</p>
       <div class="theme-mode-switcher">
         <p class="theme-mode-name">Light</p>
-        <img class="theme-mode-icon" src="assets/icon-sun.svg"></img>
+        <img class="theme-mode-icon" src="assets/icon-sun.svg" alt="Icon of the theme mode"></img>
       </div>
     </section>
 
@@ -35,29 +35,29 @@
 
     <section class="search-result-card">
       <article class="profile">
-        <img class="profile-picture" src="assets/startuppic.jpg"></img>
+        <img class="profile-picture" src="assets/startuppic.jpg" alt="Profile picture of the user"></img>
         <div class="main-info">
           <h1 class="display-username">The Octocat</h1>
-          <h3 class="account-username">@octocat</h3>
+          <h2 class="account-username">@octocat</h2>
           <p class="join-date-mobile-tablet hide-desktop">Joined 25 Jan 2011</p>
           <p class="bio-desktop not-available">This profile has no bio</p>
         </div>
         <p class="join-date-desktop">Joined 25 Jan 2011</p>
       </article>
       <article class="profile-description">
-        <h2 class="bio-mobile-tablet hide-desktop">This profile has no bio</h2>
+        <h3 class="bio-mobile-tablet hide-desktop">This profile has no bio</h3>
       </article>
       <article class="profile-socials">
         <div>
-          <h4 class="socials-title">Repos</h4>
+          <p class="socials-title">Repos</p>
           <p class="repos-amount amount">8</p>
         </div>
         <div>
-          <h4 class="socials-title">Followers</h4>
+          <p class="socials-title">Followers</p>
           <p class="followers-amount amount">3938</p>
         </div>
         <div>
-          <h4 class="socials-title">Following</h4>
+          <p class="socials-title">Following</p>
           <p class="following-amount amount">9</p>
         </div>
       </article>
