--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <section class="heading">
       <p class="app-name">devfinder</p>
-      <div class="theme-mode-switcher">
+      <button class="theme-mode-switcher">
         <p class="theme-mode-name">Light</p>
         <img class="theme-mode-icon" src="assets/icon-sun.svg" alt="Icon of the theme mode"></img>
-      </div>
+      </button>
     </section>
 
     <form class="search-form" action="#">
@@ -34,7 +34,7 @@
     </form>
 
     <section class="search-result-card">
-      <article class="profile">
+      <div class="profile">
         <img class="profile-picture" src="assets/startuppic.jpg" alt="Profile picture of the user"></img>
         <div class="main-info">
           <h1 class="display-username">The Octocat</h1>
@@ -43,11 +43,11 @@
           <p class="bio-desktop not-available">This profile has no bio</p>
         </div>
         <p class="join-date-desktop">Joined 25 Jan 2011</p>
-      </article>
-      <article class="profile-description">
+      </div>
+      <div class="profile-description">
         <h3 class="bio-mobile-tablet hide-desktop">This profile has no bio</h3>
-      </article>
-      <article class="profile-socials">
+      </div>
+      <div class="profile-socials">
         <div>
           <p class="socials-title">Repos</p>
           <p class="repos-amount amount">8</p>
@@ -60,8 +60,8 @@
           <p class="socials-title">Following</p>
           <p class="following-amount amount">9</p>
         </div>
-      </article>
-        <article class="profile-detail">
+      </div>
+        <div class="profile-detail">
           <div class="profile-detail-element">
             <img class="location-icon" src="assets/icon-location.svg" alt=""><p class="location">San Francisco</p>
           </div>
@@ -74,7 +74,7 @@
           <div class="profile-detail-element">
             <img class="company-icon" src="assets/icon-company.svg" alt=""><p class="company">@github</p>
           </div>
-        </article>
+        </div>
     </section>
 
   </main>
